# RAFT_Protocol

./: CMakeLists.txt  Entry.h  README  RaftHost.h  RaftMessage.cpp  RaftMessage.h  RaftMessenger.cpp  RaftMessenger.h  Serialization.cpp  Serialization.h  Server.cpp  Server.h  main.cpp
client/: Client.cpp  Client.h
raftbehaviors/: Follower.cpp  Follower.h  Leader.cpp  Leader.h  RaftBehavior.cpp  RaftBehavior.h
server/: Server.cpp  Server.h
tests/: MessageTests.cpp  ServerTests.cpp
